Add local application detail workflow
